change camera value through GUI

--- a/modules/LevelEditor/imgui.ini
+++ b/modules/LevelEditor/imgui.ini
@@ -33,3 +33,38 @@ Pos=140,51
 Size=300,100
 Collapsed=0
 
+[Window][Child Window - File Browser]
+Pos=60,60
+Size=189,77
+Collapsed=0
+
+[Window][Example: simple popup]
+Pos=60,60
+Size=192,133
+Collapsed=0
+
+[Window][Example: popup context view]
+Pos=60,60
+Size=190,48
+Collapsed=0
+
+[Window][Example: simple popup modal]
+Pos=60,60
+Size=277,145
+Collapsed=0
+
+[Window][Example: tooltip]
+Pos=60,60
+Size=211,119
+Collapsed=0
+
+[Window][Example: collapsing header]
+Pos=60,60
+Size=272,106
+Collapsed=1
+
+[Window][Level Editor]
+Pos=225,45
+Size=198,198
+Collapsed=0
+
