create basic auto display object component on inspector

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Level Editor]
-Pos=312,23
-Size=176,133
+Pos=319,6
+Size=178,193
+Collapsed=0
+
+[Window][Hierachy]
+Pos=4,3
+Size=100,150
+Collapsed=0
+
+[Window][Inspector]
+Pos=5,160
+Size=150,100
 Collapsed=0
 
