temporary remove using child game object due to incorrect when calculate local position of child

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Level Editor]
-Pos=319,6
+Pos=320,6
 Size=178,193
 Collapsed=0
 
@@ -16,5 +16,10 @@ Collapsed=0
 [Window][Inspector]
 Pos=5,160
 Size=150,100
+Collapsed=0
+
+[Window][ImGui Demo]
+Pos=70,3
+Size=404,273
 Collapsed=0
 
