fix hierarchy logic, fix some indent, testing more depth in game object childs

--- a/imgui.ini
+++ b/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Level Editor]
 Pos=373,2
-Size=126,195
+Size=124,192
 Collapsed=0
 
 [Window][Hierachy]
@@ -19,7 +19,7 @@ Size=150,100
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=35,-17
-Size=404,273
+Pos=22,28
+Size=382,206
 Collapsed=0
 
