--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Level Editor]
-Pos=373,2
+Pos=360,8
 Size=124,192
 Collapsed=0
 
@@ -21,5 +21,10 @@ Collapsed=0
 [Window][ImGui Demo]
 Pos=22,28
 Size=382,206
+Collapsed=0
+
+[Window][Hierarchy]
+Pos=3,1
+Size=100,150
 Collapsed=0
 
