Add fps counter

--- a/imgui.ini
+++ b/imgui.ini
@@ -3,28 +3,8 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Level Editor]
-Pos=367,4
-Size=124,192
-Collapsed=0
-
-[Window][Hierachy]
-Pos=4,8
-Size=100,150
-Collapsed=0
-
-[Window][Inspector]
-Pos=5,160
-Size=150,100
-Collapsed=0
-
-[Window][ImGui Demo]
-Pos=22,28
-Size=382,206
-Collapsed=0
-
-[Window][Hierarchy]
-Pos=4,8
-Size=100,150
-Collapsed=0
+[Window][FPS]
+Pos=100,10
+Size=70,50
+Collapsed=1
 
