--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][FPS]
-Pos=100,10
+Pos=120,450
 Size=70,50
-Collapsed=1
+Collapsed=0
+
+[Window][Log]
+Pos=10,50
+Size=70,50
+Collapsed=0
 
